Bug 87339 - #define UNIQUE is maybe not that unique, redefinition error
Summary: #define UNIQUE is maybe not that unique, redefinition error
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-15 19:35 UTC by Umut Tezduyar
Modified: 2015-01-23 14:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gcc -E (816.90 KB, text/plain)
2015-01-23 13:06 UTC, Umut Tezduyar
Details

Description Umut Tezduyar 2014-12-15 19:35:56 UTC
I have no idea why only I am seeing this conflict but due to 2 "assert_cc"s being placed on the same line, we are getting redefinition error.

In file included from /build/systemd/src/resolve/resolved-dns-rr.h:30:0,
                 from /build/systemd/src/resolve/resolved-link.h:34,
                 from /build/systemd/src/resolve/resolved-dns-server.h:36,
                 from /build/systemd/src/resolve/resolved-dns-scope.h:28,
                 from /build/systemd/src/resolve/resolved-dns-query.h:32,
                 from /build/systemd/src/resolve/resolved-manager.h:43,
                 from /build/systemd/src/resolve/resolved-bus.h:24,
                 from /build/systemd/src/resolve/resolved-bus.c:26:
/build/systemd/src/resolve/dns-type.h:120:1: error: redefinition of 'struct _assert_struct_120'
In file included from /build/systemd/src/resolve/resolved-bus.c:23:0:
/build/systemd/src/libsystemd/sd-bus/bus-util.h:120:1: note: originally defined here
Makefile:13514: recipe for target 'src/resolve/resolved-bus.o' failed

systemd 218
Comment 1 Zbigniew Jedrzejewski-Szmek 2015-01-06 02:30:02 UTC
Can you attach the output of 'gcc -E' for the file in question?
Comment 2 Umut Tezduyar 2015-01-23 13:06:19 UTC
Created attachment 112719 [details]
gcc -E
Comment 3 Umut Tezduyar 2015-01-23 13:06:40 UTC
mipsisa32r2el-axis-linux-gnu-gcc  -isystem /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/target/mipsisa32r2el-axis-linux-gnu/include -isystem /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/target/mipsisa32r2el-axis-linux-gnu/usr/include -std=gnu99 -DHAVE_CONFIG_H -I. -I/home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd  -include ./config.h -DPKGSYSCONFDIR=\"/etc/systemd\" -DSYSTEM_CONFIG_UNIT_PATH=\"/etc/systemd/system\" -DSYSTEM_DATA_UNIT_PATH=\"/usr/lib/systemd/system\" -DSYSTEM_SYSVINIT_PATH=\"\" -DSYSTEM_SYSVRCND_PATH=\"\" -DUSER_CONFIG_UNIT_PATH=\"/etc/systemd/user\" -DUSER_DATA_UNIT_PATH=\"/usr/lib/systemd/user\" -DCERTIFICATE_ROOT=\"/etc/ssl\" -DCATALOG_DATABASE=\"/var/lib/systemd/catalog/database\" -DSYSTEMD_CGROUP_AGENT_PATH=\"/usr/lib/systemd/systemd-cgroups-agent\" -DSYSTEMD_BINARY_PATH=\"/usr/lib/systemd/systemd\" -DSYSTEMD_SHUTDOWN_BINARY_PATH=\"/usr/lib/systemd/systemd-shutdown\" -DSYSTEMD_SLEEP_BINARY_PATH=\"/usr/lib/systemd/systemd-sleep\" -DSYSTEMCTL_BINARY_PATH=\"/usr/bin/systemctl\" -DSYSTEMD_TTY_ASK_PASSWORD_AGENT_BINARY_PATH=\"/usr/bin/systemd-tty-ask-password-agent\" -DSYSTEMD_STDIO_BRIDGE_BINARY_PATH=\"/usr/bin/systemd-stdio-bridge\" -DROOTPREFIX=\"/usr\" -DRANDOM_SEED_DIR=\"/var/lib/systemd/\" -DRANDOM_SEED=\"/var/lib/systemd/random-seed\" -DSYSTEMD_CRYPTSETUP_PATH=\"/usr/lib/systemd/systemd-cryptsetup\" -DSYSTEM_GENERATOR_PATH=\"/usr/lib/systemd/system-generators\" -DUSER_GENERATOR_PATH=\"/usr/lib/systemd/user-generators\" -DSYSTEM_SHUTDOWN_PATH=\"/usr/lib/systemd/system-shutdown\" -DSYSTEM_SLEEP_PATH=\"/usr/lib/systemd/system-sleep\" -DSYSTEMD_KBD_MODEL_MAP=\"/usr/share/systemd/kbd-model-map\" -DX_SERVER=\"/usr/bin/X\" -DUDEVLIBEXECDIR=\"/usr/lib/udev\" -DPOLKIT_AGENT_BINARY_PATH=\"/usr/bin/pkttyagent\" -DQUOTACHECK=\"/usr/sbin/quotacheck\" -DKEXEC=\"/usr/sbin/kexec\" -DLIBDIR=\"/usr/lib\" -DROOTLIBDIR=\"/usr/lib\" -DTEST_DIR=\"/home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/test\" -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src -I ./src/shared -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/shared -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/network -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/login -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/journal -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/timedate -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/timesync -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/resolve -I ./src/resolve -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/systemd -I ./src/core -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/core -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/libudev -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/udev -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/udev/net -I ./src/udev -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/libsystemd/sd-bus -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/libsystemd/sd-event -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/libsystemd/sd-rtnl -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/libsystemd/sd-network -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/libsystemd-network -I /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/libsystemd-terminal -Wp,-D_FORTIFY_SOURCE=2    -pipe -Wall -Wextra -Wno-inline -Wundef -Wformat=2 -Wformat-security -Wformat-nonliteral -Wlogical-op -Wsign-compare -Wmissing-include-dirs -Wold-style-definition -Wpointer-arith -Winit-self -Wdeclaration-after-statement -Wfloat-equal -Wsuggest-attribute=noreturn -Wmissing-prototypes -Wstrict-prototypes -Wredundant-decls -Wmissing-declarations -Wmissing-noreturn -Wshadow -Wendif-labels -Wstrict-aliasing=2 -Wwrite-strings -Wno-long-long -Wno-overlength-strings -Wno-unused-parameter -Wno-missing-field-initializers -Wno-unused-result -Werror=overflow -Wnested-externs -ffast-math -fno-common -fdiagnostics-show-option -fno-strict-aliasing -fvisibility=hidden -ffunction-sections -fdata-sections -fstack-protector -fPIE --param=ssp-buffer-size=4 -ffat-lto-objects   -Wall -Wshadow -O2 -g3 -D_FORTIFY_SOURCE=2 -fstack-protector  -MT src/resolve/resolved-bus.o -MD -MP -MF $depbase.Tpo -c -E /home/umuttl/Development/p7214.umuttl.2014.12.11.13.51/apps/systemd/systemd/src/resolve/resolved-bus.c
Comment 4 Zbigniew Jedrzejewski-Szmek 2015-01-23 14:33:21 UTC
Should be fixed in http://cgit.freedesktop.org/systemd/systemd/commit/?id=6825a04de6.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.